--- a/resources/assets/sass/pages/resume.scss
+++ b/resources/assets/sass/pages/resume.scss
@@ -1,49 +1,192 @@
 // Resume specific styles
 
 #resume {
-  display: flex;
-  flex-wrap: wrap;
-}
 
-.resume__editor, .resume__content {
-  flex-basis: 0;
-  flex-grow: 1;
+  width: 100%;
+  overflow: hidden;
   height: 100vh;
-  align-items: center;
-}
 
+  .close {
+    position: fixed;
+    padding: 16px;
+    background-color: $jazzy;
+    top: 0;
+    right: 0;
+    z-index: 99;
+  }
+}
 
 //
 // Resume Editor
 //
 
+.resume__editor-mode {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  overflow: hidden;
+  height: 100vh;
+  display: flex;
+  flex-wrap: nowrap;
+  z-index: 5;
+  transition: transform 450ms;
+
+  // transitions
+  &.edit-mode-enter-active,
+  &.edit-mode-leave-active {
+    transition-duration: 650ms;
+  }
+}
+
+.resume__editor, .resume__content {
+  height: 100vh;
+  align-items: center;
+  transition: all 650ms, height 1ms;
+}
+
+
 .resume__editor {
-  width: 0px;
-  min-width: 0px;
-  max-width: 0px;
+  flex: 0 0 91.6667%;
   background-color: $ice-cube;
   overflow-y: scroll;
   overflow-x: hidden;
+  transform: translateX(0%);
+  max-width: 480px;
+  padding: 0;
 
-  transition: min-width 650ms 600ms cubic-bezier(0.240, 0.260, 0.245, 1.170),
-              max-width 650ms 600ms cubic-bezier(0.240, 0.260, 0.245, 1.170),;
+  .edit-mode-enter-active &,
+  .edit-mode-leave-active & {
+    transition: transform 650ms cubic-bezier(0.240, 0.260, 0.245, 1);
+  }
+
+  .edit-mode-enter &,
+  .edit-mode-leave-to & {
+    transform: translateX(-100%);
+  }
+
+  .preview-mode & {
+    flex: 0 0 8.334%;
+  }
+
+  @include media-breakpoint-up(sm){
+    flex: 0 0 480px;
+  };
+
+  @include media-breakpoint-up(lg){
+    .preview-mode & {
+      flex: 0 0 25%;
+    }
+  };
+
+  @include media-breakpoint-up(xl){
+    flex: 0 0 41.667%;
+    max-width: 640px;
+
+    .preview-mode & {
+      flex: 0 0 41.666%;
+      max-width: 640px;
+    }
+  };
 }
 
 .resume__editor-wrap {
-  position: relative;
+  position: absolute;
+  top: 0px;
+  right: 0px;
   display: flex;
   flex-direction: column;
   align-content: center;
   justify-content: space-between;
   height: 100%;
   min-height: 550px;
-  width: 100%;
+  width: 91.668vw;
+  max-width: 480px;
   overflow: hidden;
+  transform: translateX(0px);
+  transition: opacity 650ms;
+
+  @include media-breakpoint-down(lg){
+    .preview-mode & {
+      opacity: .4;
+    }
+  }
+
+  @include media-breakpoint-up(sm){
+    width: 100%;
+    min-width: 480px;
+  };
+
+  @include media-breakpoint-up(xl){
+    max-width: 640px;
+  };
+
+  .edit-mode-enter-active & {
+    transition: transform 850ms cubic-bezier(0.240, 0.260, 0.245, 1.170);
+  }
+
+  .edit-mode-enter & {
+    transform: translateX(-350px)
+  }
+
+  .edit-mode-leave-active & {
+    transition: transform 850ms cubic-bezier(0.240, 0.260, 0.245, 1);
+  }
+
+  .edit-mode-leave-to & {
+    transform: translateX(25%);
+  }
 }
 
 
+
+// ** resume Content
+
+.resume__content {
+  flex: 0 0 1;
+  overflow-y: scroll;
+  overflow-x: visible;
+  background-color: $white;
+  transform: translateX(0%);
+  transition: all 650ms;
+
+  // transitions
+  .edit-mode-enter-active &,
+  .edit-mode-leave-active & {
+    transition: transform 650ms cubic-bezier(0.240, 0.260, 0.245, 1);
+  }
+
+  .edit-mode-enter &,
+  .edit-mode-leave-to & {
+    transform: translateX(100%);
+  }
+
+  @include media-breakpoint-down(lg) {
+    &:after {
+      content: '';
+      position: absolute;
+      width: 150px;
+      // max-width: 100%;
+      top: 0px;
+      right: 0px;
+      height: 100%;
+      background-image: linear-gradient(to left, fade-out($white, .2), fade-out($white, 1));
+      transition: all 350ms;
+    }
+
+    .preview-mode & {
+      &:after {
+        width: 0px;
+        opacity: 0;
+      }
+    }
+  }
+}
+
+
+
 .editor__header, .editor__footer {
-  min-width: 400px;
+  // max-width: 400px;
 }
 
 
@@ -71,22 +214,21 @@
   @media ( min-height: 700px ) {
     padding: 32px;
   }
+}
 
+.editor__progress {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  background-color: transparent;
+  border-radius: 0px;
 
-  .editor__progress {
-    position: absolute;
-    top: 0;
-    left: 0;
+  .progress-bar {
+    border-radius: 0px 3px 3px 0px;
+    height: 6px;
+    transition: width 850ms;
     width: 100%;
-    background-color: transparent;
-    border-radius: 0px;
-
-    .progress-bar {
-      border-radius: 0px 3px 3px 0px;
-      height: 6px;
-      transition: width 850ms;
-      width: 100%;
-    }
   }
 }
 
@@ -169,70 +311,117 @@
   z-index: 5;
 }
 
+.preview-toggle {
+  height: 1px;
+  position: absolute;
+  width: 91.6667%;
+  max-width: 480px;
+  z-index: 25;
+  transition: all 650ms;
 
-// ** resume Content
+  @include media-breakpoint-between(xs, md){
+    .preview-mode & {
+      width: 8.6667%;
+    }
+  };
 
-.resume__content {
-  max-width: 100%;
-  overflow-y: scroll;
-  position: relative;
+  @include media-breakpoint-up(sm) {
+    width: 480px;
+  }
+
+  @include media-breakpoint-only(lg){
+    .preview-mode & {
+      width: 25%;
+    }
+  };
+
+  @include media-breakpoint-up(xl) {
+    width: 41.6667%;
+    max-width: 620px;
+  }
 }
 
-.sidebar {
+.preview-toggle__btn {
   position: absolute;
+  display: flex;
+  top: 50vh;
+  right: -16px;
+  width: 32px;
+  height: 32px;
+  background-color: $jazzy;
+  border-radius: 50%;
+  transition: all 250ms 0ms, top 1ms;
+  opacity: 0;
+  align-items: center;
+  justify-content: center;
+
+  .i--arrow {
+    margin: 0;
+  }
+
+  .preview-mode & {
+    .i--arrow {
+      transform: rotate(180deg);
+    }
+  }
+
+  .edit-mode & {
+    @include media-breakpoint-down(lg) {
+      animation: popIn 350ms 650ms cubic-bezier(0.240, 0.260, 0.245, 1.170);
+      animation-fill-mode: forwards;
+    }
+  }
+}
+
+@keyframes popIn {
+  0% {  opacity: 0;
+        transform: scale(.8);
+      }
+  60% {
+    transform: scale(1.1);
+  }
+  100% {  opacity: 1;
+        transform: scale(1);
+      }
+}
+
+
+.sidebar {
+  position: fixed;
   top: 0;
   left: 0;
   height: 100%;
   width: 50px;
   transform: translateX(0%);
-  transition: all 350ms 1200ms;
-}
+  transition: all 350ms 650ms;
+  z-index: 99;
 
-// edit mode
-
-#resume.edit-mode {
-  .resume__editor {
-    min-width: 480px;
-    max-width: 620px;
-
-  }
-  .sidebar {
+  .edit-mode & {
     transform: translateX(-100%);
     transition: all 350ms 0ms;
   }
+
+  .edit-btn {
+    position: absolute;
+    left: 0px;
+    bottom: 0px;
+    margin: 15px;
+    z-index: 99;
+  }
 }
 
-.edit-btn {
-  position: absolute;
-  left: 0px;
-  bottom: 0px;
-  margin: 15px;
-  z-index: 99;
-}
 
 .g__row {
   box-sizing: border-box;
 }
 
-.container {
-}
 
 // *************************
 // CONTENT
 // *************************
 
-.resume__content {
 
-  .content__phase {
-    width: 100%;
-  }
-}
-
-.resume__content {
-  transition: all 350ms;
-}
-
-.content__phase-wrap {
+#resume__preview {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
@@ -250,10 +439,11 @@
   left: 0;
 }
 
-.content__phase {
+.preview__phase {
   max-height: 100vh;
+  width: 100%;
+  min-width: 91.667vw;
   overflow: visible;
-  transition: all 700ms;
   padding-top: 4em;
 
   > *:last-child {
@@ -267,9 +457,17 @@
     width: 100%;
     padding: 2em 0;
   }
+
+  @include media-breakpoint-up(lg){
+    min-width: 75vw;
+  };
+
+  @include media-breakpoint-up(xl){
+    min-width: 100%;
+  };
 }
 
-.content__phase-wrap {
+.preview__phase {
   &.slide-enter-active,
   &.slide-leave-active {
     transition: all 700ms;
@@ -304,6 +502,7 @@
   opacity: 0;
   transform: translateY(-50px);
 }
+
 
 //
 //  Resume introStyle
@@ -345,18 +544,56 @@
   }
 }
 
+
+//
+// Resume Layout
+//
+
 #resume__layout {
 
-  margin-top: 6rem;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  opacity: 1;
+  transform: translateY(0);
+  overflow-y: auto;
+  overflow-x: hidden;
 
-  &.intro-enter-active, &.intro-leave-active {
-    transition: all 800ms;
+
+    &.edit-mode-enter-active {
+      transition-duration: 1250ms;
+    }
+
+    &.edit-mode-leave-active {
+      transition-duration: 450ms;
+    }
+
+}
+
+.resume__layout-wrap {
+  padding-top: 6rem;
+
+  .edit-mode-enter-active & {
+    transition: all 650ms 400ms ease;
   }
 
-  &.intro-enter, &.intro-leave-to {
+  .edit-mode-leave-active & {
+    transition: all 450ms ease-out;
+  }
+
+  .edit-mode-enter & {
+    transform: translateY(48px);
     opacity: 0;
   }
+
+  .edit-mode-leave-to & {
+    opacity: 0;
+    transform: translateY(100px);
+  }
 }
+
 
 
 .i--arrow {
