--- a/resources/assets/sass/components/_modal.scss
+++ b/resources/assets/sass/components/_modal.scss
@@ -11,23 +11,23 @@ $modal-title-line-height:     $line-height-base !default;
 
 $modal-content-bg:               $white !default;
 $modal-content-border-color:     transparent;
-$modal-content-border-width:     0;
-$modal-content-xs-box-shadow:    0 3px 9px rgba($black,.5);
-$modal-content-sm-up-box-shadow: 0 25px 60px -35px rgba($black, .3);
+$modal-content-border-width:     0px;
+$modal-content-xs-box-shadow:    0 3px 15px -3px rgba($grover, .3);
+$modal-content-sm-up-box-shadow: 0 15px 60px -25px rgba($grover, .3);
 
-$modal-backdrop-bg:           $black !default;
-$modal-backdrop-opacity:      .5 !default;
-$modal-header-border-color:   $gray-lighter !default;
+$modal-backdrop-bg:           $lightning;
+$modal-backdrop-opacity:      .8;
+$modal-header-border-color:   lighten($gray-lighter, 10%);
 $modal-footer-border-color:   $modal-header-border-color !default;
-$modal-header-border-width:   $modal-content-border-width !default;
-$modal-footer-border-width:   $modal-header-border-width !default;
+$modal-header-border-width:   1px;
+$modal-footer-border-width:   1px;
 $modal-header-padding:        15px !default;
 
 $modal-lg:                    800px !default;
 $modal-md:                    500px !default;
 $modal-sm:                    300px !default;
 
-$modal-transition:            transform .3s ease-out !default;
+$modal-transition:            all 300ms 50ms cubic-bezier(0.240, 0.260, 0.245, 1.170);
 
 
 
@@ -50,8 +50,10 @@ $modal-transition:            transform .3s ease-out !default;
   bottom: 0;
   left: 0;
   z-index: $zindex-modal;
-  display: none;
+  display: flex;
+  align-items: center;
   overflow: hidden;
+
   // Prevent Chrome on Windows from adding a focus outline. For details, see
   // https://github.com/twbs/bootstrap/pull/10951.
   outline: 0;
@@ -59,36 +61,33 @@ $modal-transition:            transform .3s ease-out !default;
   // gnarly iOS Safari bug: https://bugs.webkit.org/show_bug.cgi?id=158342
   // See also https://github.com/twbs/bootstrap/issues/17695
 
-  padding: 0 $grid-gutter-width-base;
+  background-color: rgba($modal-backdrop-bg, $modal-backdrop-opacity);
 
   // When fading in the modal, animate it to slide down
-  &.fade .modal__dialog {
-    @include transition($modal-transition);
-    transform: translate(0, -25%);
-  }
-  &.show .modal__dialog { transform: translate(0, 0); }
-}
+  .modal__dialog { transform: scale(1); opacity: 1}
 
-.modal--centered {
-  text-align: center;
-  white-space: nowrap;
+  // transitions
+  &.modal-enter-active,
+  &.modal-leave-active {
+    transition: all 350ms;
 
-  &:before {
-    content: '';
-    height: 100%;
-    width: 0px;
-    display: inline-block;
-    vertical-align: middle;
-    pointer-events: none;
+    &.fade .modal__dialog {
+      @include transition($modal-transition);
+    }
   }
-  .modal__dialog {
-    vertical-align: middle;
-    text-align: left;
-    display: inline-block;
+
+  &.modal-enter,
+  &.modal-leave-to {
+    background-color: rgba($modal-backdrop-bg, 0);
+
+    &.fade .modal__dialog {
+      transform: scale(.85);
+      opacity: 0;
+    }
   }
 }
 
-.modal-open .modal {
+.modal-open .modal__dialog {
   overflow-x: hidden;
   overflow-y: auto;
 }
@@ -98,13 +97,14 @@ $modal-transition:            transform .3s ease-out !default;
   position: relative;
   width: 100%;
   min-width: 320px;
-  margin: $modal-dialog-margin auto;
+  margin: auto;
   white-space: normal;
+  max-height: 100vh;
+  padding: $grid-gutter-width-base;
+  overflow: hidden;
 
   .close {
-    position: absolute;;
-    // right: -$modal-inner-padding;
-    // top: -$modal-inner-padding;
+    position: absolute;
     right: 0;
     top: 0;
     margin: .25rem;
@@ -114,23 +114,9 @@ $modal-transition:            transform .3s ease-out !default;
     transition: all 150ms 0ms;
     border-radius: 50%;
 
-
-    // &:after {
-    //   display: inline-block;
-    //   text-align: center;
-    //   line-height: 18px;
-    //   width: 20px;
-    //   height: 20px;
-    //   border-radius: 50%;
-    // }
-
     &:hover {
       transform: scale(1.3);
       background-color: $gray-lighter;
-
-      // &:after {
-      //   background-color: $gray-lighter;
-      // }
     }
   }
 }
@@ -147,21 +133,7 @@ $modal-transition:            transform .3s ease-out !default;
   @include box-shadow($modal-content-xs-box-shadow);
   // Remove focus outline from opened modal
   outline: 0;
-}
-
-// Modal background
-.modal__backdrop {
-  position: fixed;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  z-index: $zindex-modal-backdrop;
-  background-color: $modal-backdrop-bg;
-
-  // Fade for backdrop
-  &.fade { opacity: 0; }
-  &.show { opacity: $modal-backdrop-opacity; }
+  // margin-bottom: $grid-gutter-width-base;
 }
 
 // Modal header
@@ -217,7 +189,7 @@ $modal-transition:            transform .3s ease-out !default;
   // Automatically set modal's width for larger viewports
   .modal__dialog {
     // max-width: $modal-md;
-    margin: $modal-dialog-sm-up-margin-y auto;
+    margin: auto;
   }
 
   .modal__content {
