--- a/resources/assets/sass/components/_popover.scss
+++ b/resources/assets/sass/components/_popover.scss
@@ -1,7 +1,22 @@
+// Popovers
+
+$popover-inner-padding:               $grid-gutter-width-base / 1.5;
+$popover-bg:                          $gummy;
+$popover-max-width:                   276px !default;
+$popover-border-width:                $border-width !default;
+$popover-border-color:                transparent;
+$popover-box-shadow:                  0px 4px 28px -4px fade-out($grover, .85);
+
+$popover-arrow-width:                 6px;
+$popover-arrow-height:                30px;
+$popover-arrow-color:                 $popover-bg !default;
+
+$popover-arrow-outer-width:           ($popover-arrow-width + 1px) !default;
+$popover-arrow-outer-color:           fade-in($popover-border-color, .05) !default;
+
+
 .popover {
   position: absolute;
-  top: 0;
-  left: 0;
   z-index: $zindex-popover;
   display: block;
   max-width: $popover-max-width;
@@ -10,9 +25,11 @@
   // So reset our font and text properties to avoid inheriting weird values.
   @include reset-text();
   font-size: $font-size-sm;
+  font-family: $font-family-sans-serif;
   // Allow breaking very long words so they don't overflow the popover's bounds
   word-wrap: break-word;
   background-color: $popover-bg;
+  color: $white;
   background-clip: padding-box;
   border: $popover-border-width solid $popover-border-color;
   @include border-radius($border-radius-lg);
@@ -23,117 +40,89 @@
 
   &.popover-top,
   &.bs-tether-element-attached-bottom {
-    margin-top: -$popover-arrow-width;
-
-    &::before,
-    &::after {
-      left: 50%;
-      border-bottom-width: 0;
-    }
+    margin-top: -$popover-arrow-width - 6;
 
     &::before {
-      bottom: -$popover-arrow-outer-width;
-      margin-left: -$popover-arrow-outer-width;
-      border-top-color: $popover-arrow-outer-color;
-    }
-
-    &::after {
-      bottom: -($popover-arrow-outer-width - 1);
-      margin-left: -$popover-arrow-width;
-      border-top-color: $popover-arrow-color;
+      bottom: -$popover-arrow-width;
+      left: 50%;
+      margin-left: -$popover-arrow-height / 2;
+      height: $popover-arrow-outer-width;
+      width: $popover-arrow-height;
+      background: {
+        image: url('../img/UI/popover-nub-bottom.svg');
+        position: top center;
+        repeat: no-repeat;
+      }
     }
   }
 
   &.popover-right,
   &.bs-tether-element-attached-left {
-    margin-left: $popover-arrow-width;
-
-    &::before,
-    &::after {
-      top: 50%;
-      border-left-width: 0;
-    }
+    margin-left: $popover-arrow-width + 6;
 
     &::before {
-      left: -$popover-arrow-outer-width;
-      margin-top: -$popover-arrow-outer-width;
-      border-right-color: $popover-arrow-outer-color;
-    }
-
-    &::after {
-      left: -($popover-arrow-outer-width - 1);
-      margin-top: -($popover-arrow-outer-width - 1);
-      border-right-color: $popover-arrow-color;
+      top: 50%;
+      left: -$popover-arrow-width;
+      margin-top: -$popover-arrow-height / 2;
+      width: $popover-arrow-outer-width;
+      height: $popover-arrow-height;
+      background: {
+        image: url('../img/UI/popover-nub-left.svg');
+        position: right center;
+        repeat: no-repeat;
+      }
     }
   }
 
   &.popover-bottom,
   &.bs-tether-element-attached-top {
-    margin-top: $popover-arrow-width;
-
-    &::before,
-    &::after {
-      left: 50%;
-      border-top-width: 0;
-    }
+    margin-top: $popover-arrow-width + 6;
 
     &::before {
-      top: -$popover-arrow-outer-width;
-      margin-left: -$popover-arrow-outer-width;
-      border-bottom-color: $popover-arrow-outer-color;
-    }
-
-    &::after {
-      top: -($popover-arrow-outer-width - 1);
-      margin-left: -$popover-arrow-width;
-      border-bottom-color: $popover-title-bg;
-    }
-
-    // This will remove the popover-title's border just below the arrow
-    .popover-title::before {
-      position: absolute;
-      top: 0;
+      top: -$popover-arrow-width;
       left: 50%;
-      display: block;
-      width: 20px;
-      margin-left: -10px;
-      content: "";
-      border-bottom: 1px solid $popover-title-bg;
+      margin-left: -$popover-arrow-height / 2;
+      height: $popover-arrow-outer-width;
+      width: $popover-arrow-height;
+      background: {
+        image: url('../img/UI/popover-nub-top.svg');
+        position: top center;
+        repeat: no-repeat;
+      }
     }
   }
 
   &.popover-left,
   &.bs-tether-element-attached-right {
-    margin-left: -$popover-arrow-width;
-
-    &::before,
-    &::after {
-      top: 50%;
-      border-right-width: 0;
-    }
+    margin-left: -$popover-arrow-width - 6;
 
     &::before {
-      right: -$popover-arrow-outer-width;
-      margin-top: -$popover-arrow-outer-width;
-      border-left-color: $popover-arrow-outer-color;
+      top: 50%;
+      right: -$popover-arrow-width;
+      margin-top: -$popover-arrow-height / 2;
+      width: $popover-arrow-outer-width;
+      height: $popover-arrow-height;
+      background: {
+        image: url('../img/UI/popover-nub-right.svg');
+        position: right center;
+        repeat: no-repeat;
+      }
     }
+  }
 
-    &::after {
-      right: -($popover-arrow-outer-width - 1);
-      margin-top: -($popover-arrow-outer-width - 1);
-      border-left-color: $popover-arrow-color;
-    }
+  .close {
+    position: absolute;
+    top: 0px;
+    right: 0px;
   }
 }
 
 
 // Offset the popover to account for the popover arrow
 .popover-title {
-  padding: $popover-title-padding-y $popover-title-padding-x;
-  margin-bottom: 0; // Reset the default from Reboot
-  font-size: $font-size-base;
-  background-color: $popover-title-bg;
-  border-bottom: $popover-border-width solid darken($popover-title-bg, 5%);
+  margin-bottom: .5rem; // Reset the default from Reboot
+  font-size: $font-size-h5;
+  color: $white;
   $offset-border-width: calc(#{$border-radius-lg} - #{$popover-border-width});
   @include border-top-radius($offset-border-width);
 
@@ -143,7 +132,11 @@
 }
 
 .popover-content {
-  padding: $popover-content-padding-y $popover-content-padding-x;
+
+}
+
+span.popover-link {
+  display: inline-block;
 }
 
 
@@ -151,21 +144,36 @@
 //
 // .popover-arrow is outer, .popover-arrow::after is inner
 
-.popover::before,
-.popover::after {
+.popover::before {
+  content: '';
   position: absolute;
   display: block;
   width: 0;
   height: 0;
-  border-color: transparent;
-  border-style: solid;
 }
 
-.popover::before {
-  content: "";
-  border-width: $popover-arrow-outer-width;
+
+// Shepherd Stuff
+//
+
+.shepherd-step {
+  display: none;
+  opacity: 0;
+
+  &.shepherd-open {
+    display: block;
+    animation: popoverIn 450ms 350ms forwards;
+  }
+
 }
-.popover::after {
-  content: "";
-  border-width: $popover-arrow-width;
+
+@keyframes popoverIn {
+  from {
+    opacity: 0;
+    margin-top: 16px;
+  }
+  to {
+    opacity: 1;
+    margin-top: 0px;
+  }
 }
