--- a/resources/assets/sass/pages/resume.scss
+++ b/resources/assets/sass/pages/resume.scss
@@ -3,8 +3,6 @@
 #resume {
 
   width: 100%;
-  overflow: hidden;
-  height: 100vh;
 
   > .close {
     position: fixed;
@@ -399,6 +397,7 @@
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
+  align-items: center;
 
   .edit-mode & {
     transform: translateX(-100%);
@@ -409,7 +408,8 @@
     flex: 0 0 auto;
     left: 0px;
     bottom: 0px;
-    margin: 15px;
+    width: 20px;
+    margin-bottom: 15px;
     z-index: 99;
   }
 }
@@ -554,31 +554,18 @@
 //
 
 #resume__layout {
+  padding-top: 6rem;
 
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100vh;
-  opacity: 1;
-  transform: translateY(0);
-  overflow-y: auto;
-  overflow-x: hidden;
+  &.edit-mode-enter-active {
+    transition-duration: 1250ms;
+  }
 
-
-    &.edit-mode-enter-active {
-      transition-duration: 1250ms;
-    }
-
-    &.edit-mode-leave-active {
-      transition-duration: 450ms;
-    }
-
+  &.edit-mode-leave-active {
+    transition-duration: 450ms;
+  }
 }
 
 .resume__layout-wrap {
-  padding-top: 6rem;
-
   .edit-mode-enter-active & {
     transition: all 650ms 400ms ease;
   }
@@ -597,7 +584,6 @@
     transform: translateY(100px);
   }
 }
-
 
 
 .i--arrow {
