--- a/resources/assets/sass/partials/_resume-portrait.scss
+++ b/resources/assets/sass/partials/_resume-portrait.scss
@@ -1,16 +1,98 @@
 #portrait {
   width: 100%;
-  padding-bottom: 56.25%;
-  background: {
-    size: cover;
-    position: top center;
-    repeat: no-repeat;
-    color: $gray-lightest;
+  padding-bottom: 75%;
+  position: relative;
+
+  @include media-breakpoint-up('md') {
+    padding-bottom: 56.25%;
+  };
+
+  .portrait__image {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    opacity: 1;
+
+    background: {
+      size: cover;
+      position: top center;
+      repeat: no-repeat;
+      color: $gray-lightest;
+    }
+
+    transition: all 200ms;
+
+    &.swapper {
+      opacity: 0;
+
+    }
   }
 
-  transition: all 250ms;
+  .-swapping {
+    .portrait__image.swapper {
+      opacity: 1;
+    }
+  }
+
+  .loader {
+    position: absolute;
+    top: 0;
+    left: 0px;
+    margin: 15px;
+  }
 }
 
-#phase__portrait {
+.preview__phase {
+  #portrait {
+    padding-bottom: 75%;
+  }
+}
 
+//  Needs to be moved to somewhere...
+.loader {
+  width: 15px;
+  height: 15px;
+  position: relative;
+  z-index: 10;
+  opacity: 1;
+
+  &::after {
+    content: '';
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    background-image: linear-gradient(0deg, fade-out($jazzy, 1), $jazzy);
+    z-index: 10;
+    animation: loading infinite 800ms linear;
+  }
+
+  &.loading-enter-active,
+  &.loading-leave-active {
+    transition: all 350ms;
+  }
+
+  &.loading-enter-active {
+    transition-delay: 250ms;
+  }
+
+  &.loading-enter,
+  &.loading-leave-to {
+    opacity: 0;
+    transform: scale(.5);
+  }
+}
+
+@keyframes loading {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
