--- a/resources/assets/sass/components/_close.scss
+++ b/resources/assets/sass/components/_close.scss
@@ -1,13 +1,12 @@
 // Close
 
-$close-font-size:             $font-size-base;
+$close-font-size:             $font-size-sm;
 $close-font-weight:           $font-weight-bold !default;
-$close-color:                 $black !default;
+$close-color:                 inherit;
 $close-text-shadow:           none;
 
 
 .close {
-  float: right;
   font-size: $close-font-size;
   font-weight: $close-font-weight;
   line-height: 1;
@@ -17,34 +16,46 @@ $close-text-shadow:           none;
   width: 16px;
   height: 16px;
   position: relative;
+  border-radius: 50%;
+  outline: none;
+  transform: scale(1);
+  transition: all 150ms;
 
-  &:after, &:before {
-    // content: "\D7";
+  &:before, &:after {
     content: '';
-    display: inline-block;
     position: absolute;
-    left: 4px;
-    top: 7px;
-    width: 8px;
-    height: 2px;
-    background-color: $gray;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
     transition: all 150ms;
   }
 
-  &:after{
-    transform: rotate(45deg);
+  &:after {
+    content: "\D7";
+    color: inherit;
+    text-align: center;
+    line-height: 1;
   }
 
   &:before {
-    transform: rotate(135deg);
+    content: '';
+    border-radius: 50%;
+    background-color: currentColor;
+    opacity: 0;
   }
 
-
   @include hover-focus {
-    color: $close-color;
+    // color: $close-color;
     text-decoration: none;
     cursor: pointer;
     opacity: .75;
+    transform: scale(1.2);
+    outline: none;
+
+    &:before {
+      opacity: .2;
+    }
   }
 }
 
