--- a/resources/assets/sass/globals/_functions.scss
+++ b/resources/assets/sass/globals/_functions.scss
@@ -25,3 +25,21 @@
 @function typeScale($size, $ratio: $base-ratio) {
   @return pow($ratio, $size - 2) * 1rem;
 }
+
+/// Slightly lighten a color
+/// @access public
+/// @param {Color} $color - color to tint
+/// @param {Number} $percentage - percentage of `$color` in returned color
+/// @return {Color}
+@function tint($color, $percentage) {
+  @return mix(white, $color, $percentage);
+}
+
+/// Slightly darken a color
+/// @access public
+/// @param {Color} $color - color to shade
+/// @param {Number} $percentage - percentage of `$color` in returned color
+/// @return {Color}
+@function shade($color, $percentage) {
+  @return mix(black, $color, $percentage);
+}
