--- a/resources/assets/sass/globals/_variables.scss
+++ b/resources/assets/sass/globals/_variables.scss
@@ -104,6 +104,7 @@ $purple:           #613d7c !default;
 // Brand Colors
 $lightning:        #ffdd64; // yellow
 $gummy:            #f4725d; // coral
+$gummy-dark:       #dd584a;
 
 // Blues
 $late-night:       #002e53;
@@ -123,7 +124,7 @@ $gray-lightest:    #f3f7f7;
 $brand-primary:             $gummy;
 $brand-success:             $green !default;
 $brand-info:                $jean-jacket;
-$brand-warning:             $orange !default;
+$brand-warning:             $lightning !default;
 $brand-danger:              $red !default;
 $brand-inverse:             $gray-dark !default;
 
@@ -183,7 +184,7 @@ $spacers: (
     y: ($spacer-y * pow($base-ratio, 8))
   )
 ) !default;
-$border-width: 1px !default;
+$border-width: 2px;
 
 // This variable affects the `.h-*` and `.w-*` classes.
 $sizes: (
@@ -343,7 +344,7 @@ $line-height-lg:         (4 / 3) !default;
 $line-height-sm:         1.5 !default;
 
 $border-radius:          .25rem !default;
-$border-radius-lg:       .3rem !default;
+$border-radius-lg:       .5rem;
 $border-radius-sm:       .2rem !default;
 
 $component-active-color: $white !default;
@@ -379,59 +380,6 @@ $table-border-width:            $border-width !default;
 $table-border-color:            $gray-lighter !default;
 
 
-// Buttons
-//
-// For each of Bootstrap's buttons, define text, background and border color.
-
-$btn-padding-x:                  1rem !default;
-$btn-padding-y:                  .5rem !default;
-$btn-line-height:                1.25 !default;
-$btn-font-weight:                $font-weight-normal !default;
-$btn-box-shadow:                 inset 0 1px 0 rgba($white,.15), 0 1px 1px rgba($black,.075) !default;
-$btn-focus-box-shadow:           0 0 0 2px rgba($brand-primary, .25) !default;
-$btn-active-box-shadow:          inset 0 3px 5px rgba($black,.125) !default;
-
-$btn-primary-color:              $white !default;
-$btn-primary-bg:                 $brand-primary !default;
-$btn-primary-border:             $btn-primary-bg !default;
-
-$btn-secondary-color:            $gray-dark !default;
-$btn-secondary-bg:               $white !default;
-$btn-secondary-border:           #ccc !default;
-
-$btn-info-color:                 $white !default;
-$btn-info-bg:                    $brand-info !default;
-$btn-info-border:                $btn-info-bg !default;
-
-$btn-success-color:              $white !default;
-$btn-success-bg:                 $brand-success !default;
-$btn-success-border:             $btn-success-bg !default;
-
-$btn-warning-color:              $white !default;
-$btn-warning-bg:                 $brand-warning !default;
-$btn-warning-border:             $btn-warning-bg !default;
-
-$btn-danger-color:               $white !default;
-$btn-danger-bg:                  $brand-danger !default;
-$btn-danger-border:              $btn-danger-bg !default;
-
-$btn-link-disabled-color:        $gray-light !default;
-
-$btn-padding-x-sm:               .5rem !default;
-$btn-padding-y-sm:               .25rem !default;
-
-$btn-padding-x-lg:               1.5rem !default;
-$btn-padding-y-lg:               .75rem !default;
-
-$btn-block-spacing-y:            .5rem !default;
-$btn-toolbar-margin:             .5rem !default;
-
-// Allows for customizing button radius independently from global border radius
-$btn-border-radius:              $border-radius !default;
-$btn-border-radius-lg:           $border-radius-lg !default;
-$btn-border-radius-sm:           $border-radius-sm !default;
-
-$btn-transition:                 all .2s ease-in-out !default;
 
 
 // Forms
@@ -608,7 +556,7 @@ $navbar-brand-padding-y:            .25rem !default;
 $navbar-toggler-padding-x:           .75rem !default;
 $navbar-toggler-padding-y:           .25rem !default;
 $navbar-toggler-font-size:           $font-size-lg !default;
-$navbar-toggler-border-radius:       $btn-border-radius !default;
+$navbar-toggler-border-radius:      $border-radius;
 
 $navbar-inverse-color:                 rgba($white,.5) !default;
 $navbar-inverse-hover-color:           rgba($white,.75) !default;
