--- a/resources/assets/sass/mixins/_buttons.scss
+++ b/resources/assets/sass/mixins/_buttons.scss
@@ -1,31 +1,32 @@
+
 // Button variants
 //
 // Easily pump out default styles, as well as :hover, :focus, :active,
 // and disabled options for all buttons
 
-@mixin button-variant($color, $background, $border) {
-  $active-background: darken($background, 10%);
-  $active-border: darken($border, 12%);
+@mixin button-variant($color, $background, $border, $active-background: null,  $active-border: null) {
+  @if ($active-background == null) {
+    $active-background: darken($background, 10%);
+  }
+
+  @if ($active-border == null) {
+    $active-border: darken($border, 10%);
+  }
 
   color: $color;
   background-color: $background;
   border-color: $border;
-  @include box-shadow($btn-box-shadow);
+  box-shadow: 0 0 0 0px $border;
 
   // Hover and focus styles are shared
   @include hover {
     color: $color;
-    background-color: $active-background;
-    border-color: $active-border;
+    box-shadow: 0 0 0 3px $border;
+
   }
   &:focus,
   &.focus {
-    // Avoid using mixin so we can pass custom focus shadow properly
-    @if $enable-shadows {
-      box-shadow: $btn-box-shadow, 0 0 0 2px rgba($border, .5);
-    } @else {
-      box-shadow: 0 0 0 2px rgba($border, .5);
-    }
+    box-shadow: 0 0 0 3px $border;
   }
 
   // Disabled comes first so active can properly restyle
@@ -42,11 +43,15 @@
     background-color: $active-background;
     background-image: none; // Remove the gradient for the pressed/active state
     border-color: $active-border;
-    @include box-shadow($btn-active-box-shadow);
+    box-shadow: 0 0 0 1px $active-background;
   }
 }
 
-@mixin button-outline-variant($color, $color-hover: #fff) {
+@mixin button-outline-variant($color, $color-hover: #fff, $active-color: null) {
+  @if ($active-color == null) {
+    $active-color: darken($color, 10%);
+  }
+
   color: $color;
   background-image: none;
   background-color: transparent;
@@ -56,25 +61,30 @@
     color: $color-hover;
     background-color: $color;
     border-color: $color;
+    box-shadow: 0 0 0 3px $color;
   }
 
   &:focus,
   &.focus {
-    box-shadow: 0 0 0 2px rgba($color, .5);
+    color: $color-hover;
+    background-color: $color;
+    box-shadow: 0 0 0 3px $color;
   }
 
   &.disabled,
   &:disabled {
     color: $color;
     background-color: transparent;
+    box-shadow: 0 0 0 0px $color;
   }
 
   &:active,
   &.active,
   .show > &.dropdown-toggle {
     color: $color-hover;
-    background-color: $color;
-    border-color: $color;
+    background-color: $active-color;
+    border-color: $active-color;
+    box-shadow: 0 0 0 1px $active-color;
   }
 }
 
