--- a/resources/assets/sass/components/components.scss
+++ b/resources/assets/sass/components/components.scss
@@ -34,6 +34,7 @@
 @import "list-group";
 @import "responsive-embed";
 @import "close";
+@import "toggler";
 
 // Components w/ JavaScript
 @import "modal";
